--- a/FastMailService/backend/package.json
+++ b/FastMailService/backend/package.json
@@ -5,23 +5,27 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "nodemon src/server.ts",
-    "start_api": "ts-node src/api.ts"
+    "start_api": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongoose": "^8.10.1",
     "twilio": "^5.4.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
