--- a/FastMailService/backend/.env
+++ b/FastMailService/backend/.env
@@ -2,6 +2,17 @@ TWILIO_ACCOUNT_SID='AC7318f1c6dba626ae767704a9ad58673a'
 TWILIO_AUTH_TOKEN='c5e51a474171ce5bba0cb4c40163c3c3'
 TWILIO_NUMBER='+14155238886'
 TESTING_PHONE_NUMBE='+5212282213034'
-MONGO_URI='mongodb://adminAle:hiRbdzVY8m@localhost:27017/FastMailService?authSource=admin&authMechanism=SCRAM-SHA-1'
-PORT='5000'
-API_URL='http://localhost:5000/api'
+# MONGO_URI='mongodb://adminAle:hiRbdzVY8m@localhost:27017/FastMailService?authSource=admin&authMechanism=SCRAM-SHA-1'
+# PORT='5000'
+API_URL='http://localhost:3000'
+
+
+
+
+ADMIN_USER="admin"
+ADMIN_PASSWORD="hiRbdzVY8m"
+# COUCHDB_USER="Alejandro_Mota"
+# COUCHDB_PASSWORD="hiRbdzVY8m"
+COUCHDB_URL="http://127.0.0.1:5984"
+
+DATABASES=("remitentes" "destinatarios" "envios")
