--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd FastMailService/backend
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -56,7 +57,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -71,4 +72,3 @@ jobs:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
           package: .
-          
