Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -25,7 +25,6 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd FastMailService/backend
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -45,10 +44,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -57,14 +53,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4021D276A55944A583494236DC75F2CC }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_54EEDECFF75D476590BDD1B01DB153E3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4CDE38A40039482F917B9E5BD387CD8C }}
-
+      
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -72,3 +61,4 @@ jobs:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
           package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6A4DB85C053649AE9062D181FB787D76 }}
