--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ FastMailService/backend/node_modules
 FastMailService/backend/bd/*.csv
 FastMailService/.env
 
-./profile.publishsettings
+profile.publishsettings
