--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - api-solucionesmota
 
 on:
@@ -13,25 +10,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install Dependencies
         run: |
           cd FastMailService/backend
           npm install
-          npm run build --if-present
-          npm run test --if-present
+
+      - name: Build TypeScript App
+        run: |
+          cd FastMailService/backend
+          npm run build  # <-- This compiles TypeScript into dist/
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd FastMailService/backend
+          zip -r ../../release.zip dist package.json package-lock.json node_modules
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -55,11 +58,10 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6A4DB85C053649AE9062D181FB787D76 }}
+          package: 'dist' # Deploy only compiled JS files
