--- a/FastMailService/backend/package.json
+++ b/FastMailService/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node ./app.ts",
-    "dev": "nodemon ./app.ts"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
