--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -58,10 +58,15 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      - name: **Azure Login** 🔑
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
-          package: 'dist' # Deploy only compiled JS files
+          package: 'dist'  # Deploy only compiled JS files
