--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      - name: **Azure Login** 🔑
+      - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -69,4 +69,4 @@ jobs:
         with:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
-          package: 'dist'  # Deploy only compiled JS files
+          package: 'dist' # Deploy only compiled JS files
