--- a/.github/workflows/main_api-solucionesmota.yml
+++ b/.github/workflows/main_api-solucionesmota.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build TypeScript App
         run: |
           cd FastMailService/backend
-          npm run build  # <-- This compiles TypeScript into dist/
+          npm run build  # This generates "dist/" folder
 
       - name: Zip artifact for deployment
         run: |
@@ -58,15 +58,11 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'api-solucionesmota'
           slot-name: 'Production'
-          package: 'dist' # Deploy only compiled JS files
+          package: 'dist'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6A4DB85C053649AE9062D181FB787D76 }}
